<resources>
    <string name="app_name">MovieApps</string>
    <string name="apps_intro">Welcome to Movie Apps, this application using themoviedb API</string>
    <string name="genre_official_title">Genre Official</string>
    <string name="genre_official_subtitle">Please select the genre you want to see</string>
    <string name="movie_list_title">Movie List</string>
    <string name="movie_list_subtitle">Please select movie you want to see the detail</string>
    <string name="movie_list_genre_title">Genre: %1$s</string>
    <string name="movie_detail_toolbar_title">Movie Detail</string>
    <string name="movie_detail_tagline">\"%1$s\"</string>
    <string name="movie_detail_release_date">Release Date: %1$s</string>
    <string name="movie_detail_user_review_title">User Reviews</string>
    <string name="movie_detail_video_title">Video</string>
    <string name="error_title">Something went wrong check your internet connection</string>
    <string name="error_action">Retry</string>
</resources>